# HIP-Examples

kernel_fusion/dockerfiles/: Dockerfile
kernel_fusion/vectoradd_allreduce_fusion/: .gitignore  CMakeLists.txt  vdd_allreduce.cpp
vectorAdd/: Cijk_Ailk_Bljk_HHS_BH_MT64x16x64_MI16x16x16x1_SNcJRkAd3XonXVRoLfI1GgEtYN8sf8CyDskfXRcKhN7EA=.s  Makefile  README  assemble.sh  blah.co  build.sh  build_empty.sh  build_external.sh  build_link.sh  build_vectoradd_hip.sh  demo.cast  demo2.cast  demo3.cast  demo4.cast  demo5.cast  dumper.py  external.cpp  external.o-offset8192-size13976.co  external.o-offset8192-size9216.co  fused.s  fused_backup.s  fuser.py  gemm.co  gemm2.co  liveness.py  reduce_graph.py  template_begin.s  template_end.s  test.py  test.s  test2.py  test3.py  test4.py  test5.py  test6.py  vectoradd_hip-hip-amdgcn-amd-amdhsa-gfx900.bc  vectoradd_hip-hip-amdgcn-amd-amdhsa-gfx900.cui  vectoradd_hip-hip-amdgcn-amd-amdhsa-gfx900.out  vectoradd_hip-hip-amdgcn-amd-amdhsa-gfx900.s  vectoradd_hip-hip-amdgcn-amd-amdhsa-gfx90a.s  (+7 more)
vectorAdd/testbed/: testbed.cpp
